--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,10 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation'com.github.bumptech.glide:glide:4.4.0',{
+        exclude group:'com.android.support'
+    }
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
