--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,10 @@ dependencies {
     implementation'com.github.bumptech.glide:glide:4.4.0',{
         exclude group:'com.android.support'
     }
+    implementation 'com.orhanobut:logger:2.1.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
