--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,22 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 
 android.databinding.enableV2=true
+
+GROUP=com.makeunion
+VERSION_NAME=1.4.3
+VERSION_CODE=18
+
+POM_PACKAGING=aar
+POM_NAME=CalendarView
+POM_ARTIFACT_ID=material-calendarview
+POM_URL=https://github.com/prolificinteractive/material-calendarview
+POM_DESCRIPTION=A Material design back port of Android's CalendarView
+POM_SCM_URL=https://github.com/prolificinteractive/material-calendarview
+POM_SCM_CONNECTION=scm:git@github.com:prolificinteractive/material-calendarview.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com:prolificinteractive/material-calendarview.git
+POM_LICENCE_NAME=MIT License
+POM_LICENCE_URL=https://github.com/prolificinteractive/material-calendarview/blob/master/LICENSE
+POM_LICENCE_DIST=repo
+POM_DEVELOPER_ID=prolificinteractive
+POM_DEVELOPER_NAME=Prolific Interactive
+POM_DEVELOPER_EMAIL=android@prolificinteractive.com
